--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ capybara-*.html
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /public/system
+/public/assets
+/public/uploads
 /coverage/
 /spec/tmp
 **.orig
