--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,17 @@ development:
   <<: *default
   database: db/development.sqlite3
 
+travis_sqlite: &travis_sqlite
+  adapter: sqlite3
+  database: ":memory:"
+  timeout: 500
+
+travis_postgresql: &travis_postgresql
+  adapter: postgresql
+  database: travis_ci_test
+  username: postgres
+
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
