--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - 2.2.0
+cache: bundler
+bundler_args: --without development
 env:
   - DB=travis_sqlite
   - DB=travis_postgresql
