--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: ruby
 rvm:
 - 2.2.0
-cache: bundler
-bundler_args: "--without development"
+install: bundle install --without development --deployment --jobs=3 --retry=3
+cache:
+  directories:
+  - vendor/bundle
 env:
 - DB=travis_sqlite
 - DB=travis_postgresql
